index.css
@media print {
	p, #options {
		display: none;
	}
}

body {
 font-family: "Source Sans Pro";
}
p, #options {
	width: 400px;
	margin: auto;
	margin-top: 30px;
}
#tapestry {
    margin: 20px auto;
	width: 100%;
	display: table;
	border-spacing: 2px;
}
.row {
	display: block;
}
.st{
    display: table-cell;
    border: 1px solid #b3b3b3;
    /*margin: -1px;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
    transform: rotate(20deg);*/
}
.clear {
    clear: both;
}
.clear {
    clear: both;
}

